# ccc

./: CMakeLists.txt  breakfast.cpp  ccctestprob.cpp  default_ccc_problem.cpp  floorplan.py  fraction.py  gifts1.py  poetry.py  snakesandladders.py  stucobreakfast.py  yoptoddler.py
CCC 2020/: ccc2020s1.cpp  ccc20j3.py  ccc20j4.py  ccc20s2.cpp  ccc20s3.cpp  ccc20s3bruteforce.cpp  ccc20s4brute.cpp  ccc20s5.cpp
Dec 15th/: backpack.cpp  backpack.py  bag2.cpp  concatenate_parenthesis.cpp
Dec 15th Homework/: ccc17s1.cpp  ccc17s2.cpp  number_theory.cpp  triangles.cpp
Dec 15th Homework/python/: ccc17s1.py  ccc17s2.py  ccc17s3.py
Dec 15th/Lesson 2/: 1-4.cpp  1-6.cpp  dp_1.cpp  dp_2.cpp  dp_3.cpp
Dec 22nd Homework/: ccc16s1.cpp  ccc16s2.cpp  ccc16s3.cpp  ccc16s4.cpp
Dec 3rd Homework/: fib.py  lis.py  maze.py
Dec3/: binary.py  lis.py  permutation.py  watchingtv.py
Dec3/小胖老师ccc高级/: 1-2(pair).cpp  1-2.cpp  1-3(nextpermutation).cpp  1-3.cpp  1-5.cpp  CCC Lesson 1.pptx
Feb 2nd HW/:  nccc2j4s2.cpp  ccc10s3.cpp  ccc11s3.cpp  ccc11s4.cpp  ccc11s5.cpp  ccc11s5corrected.cpp  nccc1j3s1.cpp  nccc1j4s2.cpp  nccc1j5s3.cpp  nccc1s4.cpp  nccc2j3s1.cpp  nccc2s5.cpp  nccc3j4s2.cpp  nccc3s4.cpp  nccc5j3s1.cpp  nccc5j4s2.cpp  nccc5j5s3.cpp  nccc5s4.cpp  nccc5s4corrected.cpp
Feb 2nd HW/CCC 2019/: ccc19s1.cpp  ccc19s2.cpp  ccc19s3.cpp  ccc19s3corrected.cpp  ccc19s4.cpp  ccc19s5.cpp  ccc19s5again.cpp  ccc19s5corrected.cpp
Feb 2nd HW/CCC Mock 2019/: mcccj1.cpp  mcccs3.cpp  mcccs4.cpp  ncccs1.cpp
Feb 2nd HW/Lesson 8-1/: convex.cpp
Feb 9th HW/: ccc18s4.cpp  ccc18s5.cpp
Feb 9th HW/CCC Mock 2019 Pusheen/: nccc6s1.cpp  nccc6s2.cpp  nccc6s3.cpp  nccc6s4.cpp  nccc6s4brute.cpp  nccc6s5hard.cpp
Feb 9th HW/CCC Mock 2019 Tudor/: CCC Mock 2019 Tudor.cpp  nccc7s2.cpp  nccc7s3.cpp  nccc7s3.py
Feb 9th HW/Mock CCC 2020/: mccc1.cpp  mccc1s2.cpp  mccc1s22.cpp  mccc1s2array.cpp  mccc1s2vector.cpp  mccc1s3.cpp  mccc1s4.cpp
Jan 12th Homework/: ccc15s1.cpp  ccc15s2.cpp  ccc15s3.cpp  ccc15s4.cpp  ccc15s5.cpp
Jan 12th Homework/Lesson 6/: 2015S3.cpp  2015S4.cpp  2015j2.cpp  2015j3.cpp  2016S5.cpp
Jan 19th HW/Lesson 7/: 2015S4(dijskra,spfa,floyd).cpp  2015S5.cpp  ccc14s1.cpp  ccc14s2(Stack Implementation).cpp  ccc14s2.cpp  ccc14s3.cpp  ccc14s31.cpp  作业.txt
Jan 30th HW/: ccc10s1.cpp  ccc10s1redo.cpp  ccc13s1.cpp  ccc13s2.cpp  ccc13s2real.cpp  ccc13s3.cpp  ccc13s4.cpp  ccc13s5.cpp  ccc13s5corrected.cpp
Jan 30th HW/Lesson 8/: 2014S3(array).cpp  2014S3(vector).cpp  2014S3.cpp  2014S4(error_discretization).cpp  2014S4.cpp  2014S5.cpp  Point.cpp  作业.txt
Jan 5th Homework/: ccc15j1.cpp  ccc15j2.cpp  ccc15j3.cpp  ccc15j4.cpp  ccc15j5.cpp
Jan 5th/Lesson 5/: 2016S1.cpp  2016S2.cpp  2016S3.cpp  2016S4.cpp  2017S5.cpp  ◊˜“µ.txt
Playground/: ccctestprob.cpp  main.cpp  test.py
USACO/: breedflip.cpp  ride.cpp  ridetest.cpp  swap.cpp  swap.exe.stackdump  swap.in  test.cpp  triangles.cpp
USACO/silver_feb_2020/: clocktree.cpp  swap.cpp
bits/: stdc++.h
main.dSYM/Contents/Resources/DWARF/: main
