cmake_minimum_required(VERSION 3.15)
project(ccc)

set(CMAKE_CXX_STANDARD 11)

add_executable(ccc Playground/main.cpp bits/stdc++.h)

add_executable(breakfast Playground/breakfast.cpp "Dec 15th/backpack.cpp")
add_executable(backpack "Dec 15th/backpack.cpp" "Dec 15th/bag2.cpp" "Dec 15th Homework/number_theory.cpp" "Dec 15th Homework/triangles.cpp" "Dec 15th/concatenate_parenthesis.cpp")
add_executable(bag2 "Dec 15th/bag2.cpp")
add_executable(number_theory "Dec 15th Homework/number_theory.cpp")
add_executable(triangles "Dec 15th Homework/triangles.cpp")
# add_executable(1-2 Dec3/小胖老师ccc高级/1-2.cpp)
add_executable(ccc16s1 "Dec 22nd Homework/ccc16s1.cpp")
add_executable(ccc16s2 "Dec 22nd Homework/ccc16s2.cpp")
add_executable(ccc17s1 "Dec 15th Homework/ccc17s1.cpp")
add_executable(ccc17s2 "Dec 15th Homework/ccc17s2.cpp")
add_executable(ccc16s3 "Dec 22nd Homework/ccc16s3.cpp")
add_executable(ccc16s4 "Dec 22nd Homework/ccc16s4.cpp")
add_executable(ccc15j1 "Jan 5th Homework/ccc15j1.cpp")
add_executable(ccc15j2 "Jan 5th Homework/ccc15j2.cpp")
add_executable(ccc15j4 "Jan 5th Homework/ccc15j4.cpp")
add_executable(ccc15j5 "Jan 5th Homework/ccc15j5.cpp")
add_executable(ccc15j3 "Jan 5th Homework/ccc15j3.cpp")
add_executable(ccc15s3 "Jan 12th Homework/ccc15s3.cpp")
add_executable(ccc15s1 "Jan 12th Homework/ccc15s1.cpp")
add_executable(ccc15s2 "Jan 12th Homework/ccc15s2.cpp")
add_executable(ccc15s5 "Jan 12th Homework/ccc15s5.cpp")
add_executable(ccc15s4 "Jan 12th Homework/ccc15s4.cpp")
add_executable(2015S4 "Jan 12th Homework/Lesson 6/2015S4.cpp")
add_executable(ccc14s1 "Jan 19th HW/Lesson 7/ccc14s1.cpp")
add_executable(ccc14s2 "Jan 19th HW/Lesson 7/ccc14s2.cpp")
add_executable(ccc14s3 "Jan 19th HW/Lesson 7/ccc14s3.cpp")
add_executable(ccc14s31 "Jan 19th HW/Lesson 7/ccc14s31.cpp")
add_executable(2013s3 "Jan 30th HW/ccc13s1.cpp")
add_executable(ccc13s2 "Jan 30th HW/ccc13s2.cpp")
add_executable(ccc13s3 "Jan 30th HW/ccc13s3.cpp")
add_executable(ccc13s4 "Jan 30th HW/ccc13s4.cpp")
add_executable(ccc13s5 "Jan 30th HW/ccc13s5.cpp")
add_executable(ccc13s5corrected "Jan 30th HW/ccc13s5corrected.cpp")
add_executable(Point "Jan 30th HW/Lesson 8/Point.cpp")
add_executable(ccc13s2real "Jan 30th HW/ccc13s2real.cpp")
add_executable(ccc10s1 "Jan 30th HW/ccc10s1.cpp")
add_executable(ccc10s1redo "Jan 30th HW/ccc10s1redo.cpp")
add_executable(nccc1j3s1 "Feb 2nd HW/nccc1j3s1.cpp")
add_executable(nccc1j4s2 "Feb 2nd HW/nccc1j4s2.cpp")
add_executable(nccc1j5s3 "Feb 2nd HW/nccc1j5s3.cpp")
add_executable(nccc1s4 "Feb 2nd HW/nccc1s4.cpp")
add_executable(nccc2j3s1 "Feb 2nd HW/nccc2j3s1.cpp")
add_executable( nccc2j4s2 "Feb 2nd HW/ nccc2j4s2.cpp")
add_executable(nccc2s5 "Feb 2nd HW/nccc2s5.cpp")
add_executable(nccc3j4s2 "Feb 2nd HW/nccc3j4s2.cpp")
add_executable(nccc5j3s1 "Feb 2nd HW/nccc5j3s1.cpp")
add_executable(nccc5j4s2 "Feb 2nd HW/nccc5j4s2.cpp")
add_executable(nccc5j5s3 "Feb 2nd HW/nccc5j5s3.cpp")
add_executable(nccc5s4 "Feb 2nd HW/nccc5s4.cpp")
add_executable(nccc5s4corrected "Feb 2nd HW/nccc5s4corrected.cpp")
add_executable(convex "Feb 2nd HW/Lesson 8-1/convex.cpp")
add_executable(mcccj1 "Feb 2nd HW/CCC Mock 2019/mcccj1.cpp")
add_executable(ncccs1 "Feb 2nd HW/CCC Mock 2019/ncccs1.cpp")
add_executable(mcccs3 "Feb 2nd HW/CCC Mock 2019/mcccs3.cpp")
add_executable(mcccs4 "Feb 2nd HW/CCC Mock 2019/mcccs4.cpp")
add_executable(ccc10s3 "Feb 2nd HW/ccc10s3.cpp")
add_executable(ccc11s3 "Feb 2nd HW/ccc11s3.cpp")
add_executable(ccc11s4 "Feb 2nd HW/ccc11s4.cpp")
add_executable(ccc11s5 "Feb 2nd HW/ccc11s5.cpp")
add_executable(ccc19s1 "Feb 2nd HW/CCC 2019/ccc19s1.cpp")
add_executable(ccc19s2 "Feb 2nd HW/CCC 2019/ccc19s2.cpp")
add_executable(ccc19s3 "Feb 2nd HW/CCC 2019/ccc19s3.cpp")
add_executable(ccc19s3corrected "Feb 2nd HW/CCC 2019/ccc19s3corrected.cpp")
add_executable(ccc19s5 "Feb 2nd HW/CCC 2019/ccc19s5.cpp")